<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.OrderFragment">

    <ImageView
        android:id="@+id/backImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/des" />

    <TextView
        android:id="@+id/orderTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_80sdp"
        app:layout_constraintStart_toEndOf="@id/backImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/orderTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/radio_btn_order">

        <RadioButton
            android:id="@+id/rBDeliver"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:button="@null"
            android:background="@drawable/radio_btn_order"
            android:gravity="center"
            android:text="@string/deliver"
            android:textSize="@dimen/_15sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/rbPickUp"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:button="@null"
            android:background="@drawable/radio_btn_order"
            android:gravity="center"
            android:textSize="@dimen/_15sdp"
            android:text="@string/pick_up"
            android:checked="true"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:textColor="@color/black" />
    </RadioGroup>

    <TextView
        android:id="@+id/deliveryAddressTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delivery_address"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:textStyle="bold"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupOrder" />

    <TextView
        android:id="@+id/addressLineTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/satellite_town_rawalpindi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deliveryAddressTV"
        android:layout_marginStart="@dimen/_20sdp"/>

    <TextView
        android:id="@+id/addressLine2TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/house_no_267_d_block_satellite_town_rawalpindi"
        android:layout_marginStart="@dimen/_20sdp"
        android:textSize="14sp"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addressLineTV"
        android:layout_marginTop="4dp"/>

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginStart="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addressLine2TV">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/editAddressButton"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_30sdp"
            android:text="@string/edit_address"
            android:paddingStart="@dimen/_10sdp"
            android:textSize="14sp"
            android:background="@drawable/button_background"
            android:drawableStart="@drawable/edit"
            android:textColor="@color/black"
            android:layout_marginEnd="8dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addNoteButton"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_30sdp"
            android:text="@string/add_note"
            android:textSize="14sp"
            android:paddingStart="@dimen/_10sdp"
            android:background="@drawable/button_background"
            android:drawableStart="@drawable/add_notes"
            android:textColor="@color/black"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewIV"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonsLayout">

        <ImageView
            android:id="@+id/coffeeImage"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:src="@drawable/logo"
            android:scaleType="centerCrop"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/coffeeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_27sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:textSize="@dimen/_15sdp"
        android:text="@string/coffee_name"
        app:layout_constraintStart_toEndOf="@+id/cardviewIV"
        app:layout_constraintTop_toBottomOf="@id/buttonsLayout"/>

    <TextView
        android:id="@+id/decrement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decrement"
        android:layout_marginStart="@dimen/_45sdp"
        android:textSize="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_24sdp"
        app:layout_constraintStart_toEndOf="@+id/coffeeName"
        app:layout_constraintTop_toBottomOf="@id/buttonsLayout"/>

    <TextView
        android:id="@+id/qualityTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textSize="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_27sdp"
        android:layout_marginStart="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/buttonsLayout"
        app:layout_constraintStart_toEndOf="@id/decrement"/>


    <TextView
        android:id="@+id/increment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/increment"
        android:layout_marginStart="@dimen/_20sdp"
        android:textSize="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_27sdp"
        app:layout_constraintStart_toEndOf="@+id/qualityTV"
        app:layout_constraintTop_toBottomOf="@id/buttonsLayout"/>

    <TextView
        android:id="@+id/paymentSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_summary"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/cardviewIV"
        android:layout_marginStart="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_15sdp"/>

    <TextView
        android:id="@+id/priceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/paymentSummary"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/priceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rs_600"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/_180sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintStart_toEndOf="@id/priceText"
        app:layout_constraintTop_toBottomOf="@id/paymentSummary"/>

    <TextView
        android:id="@+id/deliveryFee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery_fee"
        android:textSize="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/priceValue"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/feeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rs_100"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/_133sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toEndOf="@id/deliveryFee"
        app:layout_constraintTop_toBottomOf="@id/priceValue"/>

    <ImageView
        android:id="@+id/walletIV"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:src="@drawable/wallet"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_35sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deliveryFee"
        android:contentDescription="@string/des" />

    <TextView
        android:id="@+id/cashTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cash_wallet"
        android:textStyle="bold"
        android:textSize="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_25sdp"
        app:layout_constraintStart_toEndOf="@id/walletIV"
        app:layout_constraintTop_toBottomOf="@id/deliveryFee"/>

    <TextView
        android:id="@+id/totalTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rs"
        android:textColor="@color/brown"
        android:textSize="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/cashTV"
        app:layout_constraintStart_toEndOf="@id/walletIV"/>

    <TextView
        android:id="@+id/totalChargesTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_400"
        android:textColor="@color/brown"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toEndOf="@+id/totalTV"
        app:layout_constraintTop_toBottomOf="@+id/cashTV"
        android:layout_marginStart="@dimen/_5sdp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/orderBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:backgroundTint="@color/brown"
        android:text="@string/order"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/white"
        android:layout_marginVertical="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="@drawable/rounded_button"
        app:layout_constraintTop_toBottomOf="@id/totalChargesTV"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>