<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.DashboardFragment">

    <ImageView
        android:id="@+id/coffee"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_350sdp"
        android:src="@drawable/coffee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/des" />

    <TextView
        android:id="@+id/coffeeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coffee"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_15sdp"
        android:textAlignment="center"
        android:textSize="@dimen/_25ssp"
        android:padding="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/coffee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/welcomeTV"/>


    <TextView
        android:id="@+id/welcomeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="@dimen/_13sdp"
        android:paddingHorizontal="@dimen/_25sdp"
        app:layout_constraintTop_toBottomOf="@id/coffeeTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/startBtn"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:backgroundTint="@color/brown"
        android:text="@string/get_started"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/white"
        android:layout_marginVertical="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="@drawable/rounded_button"
        app:layout_constraintTop_toBottomOf="@id/welcomeTV"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>